RESOLVED FIXED186112
LLInt get_by_id prototype caching doesn't properly handle changes
https://bugs.webkit.org/show_bug.cgi?id=186112
Summary LLInt get_by_id prototype caching doesn't properly handle changes
Keith Miller
Reported 2018-05-30 15:07:03 PDT
LLInt get_by_id prototype caching doesn't properly handle changes
Attachments
Patch (11.77 KB, patch)
2018-05-30 15:09 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2018-05-30 15:09:22 PDT
Keith Miller
Comment 2 2018-05-30 15:42:04 PDT
WebKit Commit Bot
Comment 3 2018-05-30 16:07:21 PDT
Comment on attachment 341607 [details] Patch Clearing flags on attachment: 341607 Committed r232313: <https://trac.webkit.org/changeset/232313>
WebKit Commit Bot
Comment 4 2018-05-30 16:07:22 PDT
All reviewed patches have been landed. Closing bug.
Mark Lam
Comment 5 2018-08-31 11:03:49 PDT
*** Bug 187754 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.